--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
     "education"
   ],
   "author": "Sergey Sinitsyn",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.1.6"
+  }
 }
