--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   ],
   "author": "Sergey Sinitsyn",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "hexlet-pairs": "^1.0.8"
+  },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
